--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
+<% provide(:title, "Home") %>
 <h1>Sample App</h1>
 <p>
   This is the home page for the
   <a href="https://www.railstutorial.org">Rails Tutorial</a>
-    Sample Application.
+  Sample Application.
 </p>
